# Medical-Healthcare-Rag

./: .dockerignore  .env.example  .gitignore  Ask My Docs — Incremental, Test-First Vertical Slice Plan.md  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  streamlit_app.py
prompts/v1/: abstain.txt  citation.txt  system.txt
src/api/: app.py
src/api/routes/: health.py  ingest.py  patients.py  query.py  system.py
src/generation/: citation_gate.py  generate.py
src/ingest/: chunking.py  loaders.py  pipeline.py
src/pipeline/: graph.py  state.py
src/retrieval/: dense.py  hybrid.py  rerank.py
src/router/: input_router.py  output_router.py
src/schemas/: query.py  response.py
src/services/: gemini_embed.py  storage.py  weaviate_client.py
src/utils/: config.py  prompt_loader.py
tests/: compare_retrieval.py  conftest.py  run_all_steps_manual.py  run_input_router_manual.py  run_output_router_manual.py  run_step5_manual.py  run_step7_live.py  test_all_steps.py  test_api.py  test_chunking.py  test_doc_chunks.py  test_gemini_embed.py  test_hybrid_retrieval.py  test_ingest_failure.py  test_ingest_pdf.py  test_ingest_quality.py  test_input_router.py  test_manual_verify_query.py  test_output_router_node.py  test_rerank.py  test_reranker.py  test_storage.py  test_verify_full_index_stats.py  test_verify_ingest_works.py  test_verify_multimodal_nodes.py  test_verify_weaviate_contains_images.py  test_visual_ingest.py  verify_fixes.py
tests/fixtures/: sample_medical.txt
ui/: Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/dashboard/: layout.tsx  page.tsx
ui/src/app/dashboard/chat/: page.tsx
ui/src/app/dashboard/ingest/: page.tsx
ui/src/app/dashboard/patients/: page.tsx
ui/src/components/ui/: aurora-background.tsx  bento-grid.tsx  spotlight.tsx
ui/src/store/: useStore.ts
